--- a/appform.html
+++ b/appform.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css"/>
 </head>
 <body >
-    <img src="C:users/USER/Documents/VAC/TIMETABLE/Srmseal.png"/>
+    <img src="/Srmseal.png"/>
     <div style="padding-left: 40%; padding-top: 1px;" >
         <h1 style="margin-bottom: 0%;">ADMISSION FORM</h1>
         <span id="mention"><p>Please fill out the application form carefully</p></span>
